test/JDBC/expected/BABEL-3190.out
-- psql
show babelfishpg_tsql.restore_tsql_datetime2;
go
~~START~~
text
off
~~END~~

drop table if exists babel_3190_t1;
go
drop table if exists babel_3190_t2;
go
drop table if exists babel_3190_t3;
go
CREATE TABLE babel_3190_t1(
    a sys.datetime2(6) without time zone,
    b sys.datetime,
    c sys.smalldatetime(0) without time zone
);
go
~~ERROR (Code: 0)~~

~~ERROR (Message: ERROR: syntax error at or near "without"
  Position: 52
    Server SQLState: 42601)~~

set babelfishpg_tsql.restore_tsql_datetime2 to on;
go
CREATE TABLE babel_3190_t2(
    a sys.datetime2(6) without time zone,
    b sys.datetime(3) without time zone,
    c sys.smalldatetime(0) without time zone
);
go
~~ERROR (Code: 0)~~

~~ERROR (Message: ERROR: syntax error at or near "without"
  Position: 93
    Server SQLState: 42601)~~

CREATE TABLE babel_3190_t3(
    a sys.datetime2(6) without time zone,
    b sys.datetime,
    c sys.smalldatetime(0) without time zone
);
go
select pg_catalog.format_type(oid, 3) from
    (select oid from pg_type where typname in ('datetime2', 'smalldatetime')) a;
go
~~START~~
text
sys.datetime2(3)
sys.smalldatetime(3)
~~END~~

reset babelfishpg_tsql.restore_tsql_datetime2;
go
drop table if exists babel_3190_t1;
go
drop table if exists babel_3190_t2;
go
drop table if exists babel_3190_t3;
go
